# mini-protection

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/html/: index.html
deploy/: EC2_GUIDE.md  deploy.sh  setup-ec2.sh
docs/: EXPLAIN.md  architecture.md  detection-rules.md  performance.md
event-viewer/: Dockerfile  app.py  requirements.txt
nginx/: nginx.conf
nginx/lua/: ja3.lua
rust-engine/: Cargo.toml  Dockerfile
rust-engine/config/: ja3_blacklist.txt  ja3_whitelist.txt
rust-engine/src/: main.rs
rust-engine/src/challenge/: mod.rs
rust-engine/src/config/: mod.rs
rust-engine/src/detectors/: captcha.rs  credential_stuffing.rs  header_fingerprint.rs  honeypot.rs  ip_rate_limiter.rs  ja3_fingerprint.rs  js_challenge.rs  mod.rs  path_scanner.rs  user_agent.rs
rust-engine/src/kafka/: mod.rs
rust-engine/src/packet/: mod.rs
rust-engine/src/pipeline/: detector.rs  mod.rs
rust-engine/src/shared_memory/: mod.rs
rust-engine/tests/integration/: proxy.rs
rust-engine/tests/unit/: challenge.rs  config.rs  kafka.rs  main_unit.rs  pipeline.rs
rust-engine/tests/unit/detectors/: captcha.rs  credential_stuffing.rs  header_fingerprint.rs  honeypot.rs  ip_rate_limiter.rs  ja3_fingerprint.rs  js_challenge.rs  path_scanner.rs  user_agent.rs
