[package]
name = "mini-protection-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mini-protection-engine"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = { version = "0.7", features = ["macros"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client / reverse proxy
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2"] }
http-body-util = "0.1"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Shared memory
shared_memory = "0.12"

# Pattern matching
regex = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
dashmap = "5"          # concurrent hashmap (rate limiter)
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace"] }
bytes = "1"
anyhow = "1"
thiserror = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
